Add all task files

--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -3,63 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Section page</title>
-    <style>
-        .container {
-            margin: auto;
-            margin-top: 100px;
-            width: 60vw;
-            height: 50vh;
-            background-color: rgb(176, 7, 154);
-            color: white;
-            border-radius: 15px;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-            padding: 20px;
-
-        }
-
-        details {
-            background-color: rgb(176, 7, 154);
-            font-weight: 800;
-            margin-bottom: 30px;
-        }
-
-        summary {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        summary::after {
-            content: '';
-            background: url(up.svg);
-            background-size: conver;
-            width: 25px;
-            height: 24px;
-            margin-left: .75em;
-            transition: 0.2s;
-        }
-
-        details[open]>summary::after {
-            transform: rotate(180deg);
-            margin-right: -9px;
-        }
-
-        .section {
-            background-color: white;
-            color: black;
-            padding: 20px;
-            height: 100px;
-            width: 100%;
-            margin-left: -20px;
-        }
-
-        .section1 svg {
-            padding-left: 10px;
-        }
-    </style>
+    <title>Sections for create using details and summary tag</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="container">
         <details class="styled">
@@ -91,5 +37,4 @@
         </details>
 
 </body>
-
 </html>
