--- a/form(task-1).html
+++ b/form(task-1).html
@@ -108,19 +108,19 @@
             <form>
                 <div class="fname">
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname">
+                    <input type="text" id="fname" name="fname">
                 </div>
                 <div class="lname">
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname">
+                    <input type="text" id="lname" name="lname">
                 </div>
                 <div class="fathername">
                     <label for="fatherName">Ftaher's Name</label>
-                    <input type="text" id="fatherName">
+                    <input type="text" id="fatherName" name="fatherName">
                 </div>
                 <div class="dob">
                     <label for="dob">Dob</label>
-                    <input type="text" id="dob">
+                    <input type="text" id="dob" name="dob">
                 </div>
                 <div class="gender">
                     <label for="gender">Gender</label>
@@ -132,11 +132,11 @@
                 </div>
                 <div class="add">
                     <label for="address">Address</label>
-                    <input type="text" name="address">
+                    <input type="text" name="address" id="address">
                 </div>
                 <div class="state">
                     <label for="state">State</label>
-                    <select>
+                    <select name="state" id="state">
                         <option value="ap">ap</option>
                         <option value="mp">mp</option>
                         <option value="up">up</option>
@@ -144,22 +144,22 @@
                 </div>
                 <div class="pincode">
                     <label for="pincode">Pincodde</label>
-                    <input type="text" name="pincode">
+                    <input type="text" name="pincode" id="pincode">
                 </div>
                 <div class="email">
                     <label for="email">EMail</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" name="email">
                 </div>
                 <div class="pno">
                     <label for="pno">Phone Number</label>
-                    <input type="text" id="pno">
+                    <input type="text" id="pno" name="pno">
                 </div>
                 <div class="lang">
-                    <label for="lang">Language</label>
+                    <label>Language</label>
                     <input type="checkbox" class="c1"><label class="telugu">telugu</label>
                     <input type="checkbox" class="c2"><label class="hindi">hindi</label>
                     <input type="checkbox" class="c3"><label class="eng">english</label>
-                </div>
+            </div>
                 <div class="btn">
                 <button>submit</button>
                 </div>
