create a index.html file

--- a/accordion/index.html
+++ b/accordion/index.html
@@ -29,7 +29,7 @@
         <details class="styled">
             <summary>Section #3</summary>
             <div class="section">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt velit veniam amet perspiciatis
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt velit amet perspiciatis
                 cumque, soluta, odit sapiente accusamus ipsum voluptatem repellendus saepe eos! Sint dolorem magnam
                 numquam eveniet error eos, totam odio dicta voluptatibus nam corrupti ipsa quisquam illum expedita,
                 officiis quis adipisci! Aperiam, est. Sequi explicabo at facere odio.
