--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <summary>Task</summary>
         <ul>
             <li> <a href="accordion/index.html">Accordion</a></li>
-        </ul>
+            <li> <a href="table-task/task-1/index.html">Table Task</a></li>
+        </ul
     </details>
 </div>
    </div>
