--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <details class="task-detail">
         <summary>Task</summary>
         <ul>
-            <li> <a href="accordion/index.html">Accordion</a></li>
-            <li> <a href="table-task/task-1/index.html">Table Task</a></li>
+            <li> <a href="accordion/index.html">Accordion Task</a></li>
+            <li><a href="table/index.html">Table Task</a></li>
+            <li><a href="form/index.html">Form Task</a></li>
         </ul>
     </details>
 </div>
