--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <summary>Task</summary>
         <ul>
             <li> <a href="accordion/index.html">Accordion Task</a></li>
-            <li><a href="table/index.html">Table Task</a></li>
+            <li><a href="table/table-task1.html">Table Task-1</a></li>
+            <li><a href="table/table-task2.html">Table Task-2</a></li>
+            <li><a href="table/table-task3.html">Table Task-3</a></li>
             <li><a href="form/index.html">Form Task</a></li>
         </ul>
     </details>
