--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         To For Zero
     </p>
     <div class="detail">
-    <details class="task-detail">
-        <summary>Task</summary>
-        <ul>
+    
+        <ul class="detail">
             <li> <a href="accordion/index.html">Accordion Task</a></li>
             <li><a href="table/table-task1.html">Table Task-1</a></li>
             <li><a href="table/table-task2.html">Table Task-2</a></li>
             <li><a href="table/table-task3.html">Table Task-3</a></li>
             <li><a href="form/index.html">Form Task</a></li>
-        </ul>
-    </details>
+            <li><a href="./Sign-up page/index.html">SignUp page</a></li>
+            <li><a href="./UsabilityHub Clone/index.html">Landing Page</a></li>
+ </ul>
 </div>
    </div>
 </body>
