--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="form/index.html">Form Task</a></li>
             <li><a href="./Sign-up page/index.html">SignUp page</a></li>
             <li><a href="./UsabilityHub Clone/index.html">Landing Page</a></li>
+            <li><a href="./grid-task/index.html">Grid Task</a></li>
  </ul>
 </div>
    </div>
