create a image gallery page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="./Sign-up page/index.html">SignUp page</a></li>
             <li><a href="./UsabilityHub Clone/index.html">Landing Page</a></li>
             <li><a href="./grid-task/index.html">Grid Task</a></li>
+            <li><a href="./image-gallery/index.html">Image Gallery</a></li>
  </ul>
 </div>
    </div>
