update a style sheet for grid

--- a/grid-task/index.html
+++ b/grid-task/index.html
@@ -41,14 +41,15 @@
                 </p>
             </div>
         </div>
-      <div class="bg-red">
+     <div class="bg-red">
+
         <div class="box" id="box-4">
             <div class="header">
                 <img src="./asset 26.png" alt="">
                 <h4>Lorem ipsum.</h4>
             </div>
             <div class="contain">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, sapiente reiciendis autem quod cum
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
              </p>
             </div>
         </div>
