--- a/grid-task/index.html
+++ b/grid-task/index.html
@@ -49,7 +49,7 @@
                 <h4>Lorem ipsum.</h4>
             </div>
             <div class="contain">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, consequuntur?
              </p>
             </div>
         </div>
