resturent website complete 10%

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
      <hr>
      <h2>Landing Page</h2>
      <div class="flex">
-     <a href="./UsabilityHub Clone/index.html" class="btn">Landing Page design (15-5-2024)</a>
+     <a href="./UsabilityHub Clone/index.html" class="btn">Landing Page design-1(15-5-2024)</a>
+     <a href="./Resturent-website/index.html" class="btn">Landing Page design-2 (31-5-2024)</a>
      </div>
      <hr>
      <h2>Grid Task</h2>
