--- a/Resturent-website/index.html
+++ b/Resturent-website/index.html
@@ -105,11 +105,18 @@
 
         </div>
     </section>
+
     <section></section>
-    <section></section>
+    <!-- feature section -->
+    <section class="feature-section flex container">
+        <div class="left-feature">
+            <img src="./img/Mask group.png" alt="" class="img1">
+        </div>
+        <div class="right-feature"></div>
+    </section>
     <section></section>
     <footer></footer>
-    <div style="margin-bottom: 100px;"></div>
+    <!-- <div style="margin-bottom: 100px;"></div> -->
 
     <script>
         let toggleButton = document.getElementById('toggle-btn');
