some change of style sheet

--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -33,31 +33,37 @@
                         </ul>
                     </div></a>
                
-                <a href="#">Services <i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#">Services</a>
                 <a href="#">Offers</a>
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-bag-shopping"></i>
+                <button>
                 <a href="#" class="contact flex white"><img src="./img/Vector.png" alt="">Contact</a>
+                </button>
 
             </div>
             <div class="toggle-btn hover-link" id="toggle-btn">
                 <img src="./img/hamburger.svg" alt="">
             </div>
         </nav>
-
+</header>
+<main>
         <!-- hero section -->
         <section class="hero-section flex container">
             <div class="left-side flex">
                 <h1>Dive into Delights Of Delectable <span class="green">Food</span></h1>
                 <p>Where Each Plate Weaves a Story of Culinary Mastery and Passionate Craftsmanship</p>
                 <div class="btn flex">
-                    <a class="btn-order">
+                    <button>
+                    <a href="#" class="btn-order"> 
                         Order Now
-                    </a>
+                    </a></button>
+                    <button class="flex btn">
                     <a class="watch-btn">Watch Video</a>
                     <a class="play-btn flex">
                         <img src="./img/Polygon 1.png" alt="" height="20">
                     </a>
+                    </button>
                 </div>
             </div>
             <div class="right-side flex">
@@ -82,7 +88,7 @@
             </div>
 
         </section>
-    </header>
+    
 
     <!-- category section -->
     <section class="category flex">
@@ -139,8 +145,10 @@
                     <div class="flex menus">
                         <div class="menu-card">
                             <img src="./img/Egg salad.png" alt="" width="200">
+                            <!-- <div class="hearts"> -->
                             <img src="./img/Rectangle 24.png" alt="" class="menu-rect">
                             <img src="./img/fi-sr-heart.png" alt="" class="heart">
+                            <!-- </div> -->
                             <div class="flex menu-desc">
                                 <h3>Fattoush salad</h3>
                                 <p>Description of the item</p>
@@ -247,7 +255,9 @@
             <h3 class="h3">Our Culinary Journey And Services</h3>
             <p class="contain">Rooted in passion, we curate unforgettable dining experiences and offer exceptional
                 services, blending culinary artistry with warm hospitality.</p>
+                <button>
             <a href="#" class="btn">Explore</a>
+            </button>
         </div>
 
         <div class="right">
@@ -274,7 +284,7 @@
 
         </div>
     </section>
-
+</main>
     <footer>
         <div class="container flex footer-container">
             <div class="footer-logo flex">
