Bootstrap flex demo

--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -55,7 +55,7 @@
     </div> -->
 
 
-    <!-- <div class="container-fluid text-center">
+    <div class="container-fluid text-center">
       <div class="row align-items-end border" style="height: 200px; width:100%;" >
         <div class="col order-3 border mx-2">
           One of three columns 
@@ -67,19 +67,19 @@
           three of three columns
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <div class="container text-center">
+    <!-- <div class="container text-center">
       <div class="row border justify-content-start">
         <div class="col-4 ms-auto">columns</div>
         <div class="col-4">columns</div>
        
       </div>
     </div>
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-8 offset-md-4">.col-9</div>
-        <div class="col-8">.col-4<br>Since 9 + 4 = 13 &gt; 12, this 4-column-wide div gets wrapped onto a new line as one contiguous unit.</div>
+    <div class="container">
+      <div class="row overflow-hidden">
+        <div class="col-4 offset-md-4">.col-9</div>
+        <div class="col-5">.col-4<br>Since 9 + 4 = 13 &gt; 12, this 4-column-wide div gets wrapped onto a new line as one contiguous unit.</div>
         <p class="offset-md-4">use to break a line</p>
         <div class="w-100"></div> 
 
