--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -65,45 +65,33 @@
 </head>
 <body>
     <div class="container">
-     <h2>Form Task</h2>
+     <h2>Container</h2>
      <div class="flex">
-     <a href="./form/index.html" class="btn">Form task (24-4-2024)</a>
+     <a href="./into.html" class="btn">Container demo (17-6-2024)</a>
      </div>
      <hr>
-     <h2>Accordion Task</h2>
+     <h2>Grid</h2>
      <div class="flex">
-     <a href="./accordion/index.html" class="btn">Accordion task (25-4-2024)</a>
+     <a href="./grid.html" class="btn">Grid demo (18-6-2024)</a>
      </div>
      <hr>
-     <h2>Table Task</h2>
+     <h2>Gutter</h2>
      <div class="flex">
-     <a href="./table/table-task1.html" class="btn">Table task-1 (29-4-2024)</a>
-     <a href="./table/table-task2.html" class="btn">Table task-2 (29-4-2024)</a>
-     <a href="./table/table-task3.html" class="btn">Table task-3 (29-4-2024)</a>
+     <a href="./gutter.html" class="btn">Gutter demo (21-6-2024)</a>
      </div>
      <hr>
-     <h2>Sign-up Page</h2>
+     <h2>Typography</h2>
      <div class="flex">
-     <a href="./Sign-up page/index.html" class="btn">Sign-up design (13-5-2024)</a>
+     <a href="./typography.html" class="btn">Typography demo (21-6-2024)</a>
      </div>
      <hr>
-     <h2>Landing Page</h2>
+     <h2>Flex</h2>
      <div class="flex">
-     <a href="./UsabilityHub Clone/index.html" class="btn">Landing Page design-1(15-5-2024)</a>
-     <a href="./Restaurant/index.html" class="btn">Landing Page design-2 (31-5-2024)</a>
+     <a href="./flex.html" class="btn">Flex demo (22-6-2024)</a>
      </div>
      <hr>
-     <h2>Grid Task</h2>
-     <div class="flex">
-     <a href="./grid-task/index.html" class="btn">Grid task (22-5-2024)</a>
-     <a href="./image-gallery/index.html" class="btn">Image Gallery (23-5-2024)</a>
-     </div>
-     <hr>
-     <h2>Bootstrap</h2>
-     <div class="flex">
-     <a href="./Bootstrap/index.html" class="btn">Bootstrap (17-6-2024)</a>
-     </div>
-     <hr>
+   
+   
     </div>
 </body>
 </html>
