learn Bootstrap topic

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -90,7 +90,36 @@
      <a href="./flex.html" class="btn">Flex demo (22-6-2024)</a>
      </div>
      <hr>
-   
+     <h2>Border</h2>
+     <div class="flex">
+     <a href="./border.html" class="btn">border demo (24-6-2024)</a>
+     </div>
+     <hr>
+     <h2>Float</h2>
+     <div class="flex">
+     <a href="./float.html" class="btn">float demo (24-6-2024)</a>
+     </div>
+     <hr> 
+     <h2>Interaction</h2>
+     <div class="flex">
+     <a href="./interactions.html" class="btn">Interaction demo (24-6-2024)</a>
+     </div>
+     <hr>
+     <h2>Links</h2>
+     <div class="flex">
+     <a href="./link.html" class="btn">Link demo (24-6-2024)</a>
+     </div>
+     <hr>
+     <h2>Object fit</h2>
+     <div class="flex">
+     <a href="./objectfit.html" class="btn">object-fit demo (24-6-2024)</a>
+     </div>
+     <hr>
+     <h2>Overflow</h2>
+     <div class="flex">
+     <a href="./overflow.html" class="btn">overflow demo (24-6-2024)</a>
+     </div>
+     <hr>
    
     </div>
 </body>
