update a demo of bootstrap

--- a/Bootstrap/objectfit.html
+++ b/Bootstrap/objectfit.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container m-5">
         
-<img src="/image-gallery/img/waterfoll.jpg" class="w-25 m-4 object-fit-contain border rounded" alt="...">
-<img src="/image-gallery/img/waterfoll.jpg" class="w-25 m-4 object-fit-cover border rounded" alt="...">
-<img src="/image-gallery/img/waterfoll.jpg" class="w-25 m-4 object-fit-fill border rounded" alt="...">
-<img src="/image-gallery/img/waterfoll.jpg" class="w-25 m-4 object-fit-scale border rounded" alt="...">
-<img src="/image-gallery/img/waterfoll.jpg" class="w-25 m-4 object-fit-none border rounded" alt="...">
+<img src="./waterfoll.jpg" class="w-25 m-4 object-fit-contain border rounded" alt="...">
+<img src="./waterfoll.jpg" class="w-25 m-4 object-fit-cover border rounded" alt="...">
+<img src="./waterfoll.jpg" class="w-25 m-4 object-fit-fill border rounded" alt="...">
+<img src="./waterfoll.jpg" class="w-25 m-4 object-fit-scale border rounded" alt="...">
+<img src="./waterfoll.jpg" class="w-25 m-4 object-fit-none border rounded" alt="...">
     </div>
 </body>
 </html>
