learn sizing,table,position,z-index,shadow in bootstrap

--- a/Bootstrap/border.html
+++ b/Bootstrap/border.html
@@ -18,7 +18,7 @@
     <span class="p-5 border-end">span-3</span>
     <span class="p-5 border-bottom">span-4</span>
     <span class="p-5 border-start">span-5</span> -->
-
+<h2 class="text-center">Border in bootstrap</h2>
     <div class="d-flex flex-wrap">
         <span class="p-5 m-3 border border-primary"></span>
         <span class=" p-5 m-3 border border-primary-subtle"></span>
