--- a/Bootstrap/flex.html
+++ b/Bootstrap/flex.html
@@ -31,9 +31,9 @@
   <header class="text-bg-primary">
     Header
   </header>
-  <div class="d-flex flex-md-row flex-column">
+  <div class="d-flex flex-md-row flex-column gap-3">
   <aside class="flex-grow-1">
-    <div class="content d-flex flex-column" style="height: 300px;">
+    <div class="content d-flex flex-column gap-3" style="height: 300px;">
         <div class="top text-bg-warning h-50 pt-2">Side top</div>
         <div class="bottom text-bg-danger h-50 pt-2">Side bottom</div>
     </div>
