--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -65,57 +65,45 @@
 </head>
 <body>
     <div class="container">
-     <h2>Container</h2>
+     <h2>Bootstrap (17-6-2024)</h2>
      <div class="flex">
-     <a href="./into.html" class="btn">Container demo (17-6-2024)</a>
+     <a href="./into.html" class="btn">Container </a>
      </div>
      <hr>
-     <h2>Grid</h2>
+     <h2>Bootstrap (18-6-2024)</h2>
      <div class="flex">
-     <a href="./grid.html" class="btn">Grid demo (18-6-2024)</a>
+     <a href="./grid.html" class="btn">Grid</a>
      </div>
      <hr>
-     <h2>Gutter</h2>
+     <h2>Bootstrap (21-6-2024)</h2>
      <div class="flex">
-     <a href="./gutter.html" class="btn">Gutter demo (21-6-2024)</a>
+     <a href="./gutter.html" class="btn">Gutter</a>
+     <a href="./typography.html" class="btn">Typography</a>
      </div>
      <hr>
-     <h2>Typography</h2>
+     <h2>Bootstrap (22-6-2024)</h2>
      <div class="flex">
-     <a href="./typography.html" class="btn">Typography demo (21-6-2024)</a>
+     <a href="./flex.html" class="btn">Flex</a>
      </div>
      <hr>
-     <h2>Flex</h2>
+     <h2>Bootstrap (24-6-2024)</h2>
      <div class="flex">
-     <a href="./flex.html" class="btn">Flex demo (22-6-2024)</a>
+     <a href="./border.html" class="btn">Border</a>
+     <a href="./float.html" class="btn">Float</a>
+     <a href="./interactions.html" class="btn">Interaction</a>
+     <a href="./objectfit.html" class="btn">Object-fit</a>
+     <a href="./overflow.html" class="btn">Overflow</a>
      </div>
      <hr>
-     <h2>Border</h2>
+     <h2>Bootstrap (27-6-2024)</h2>
      <div class="flex">
-     <a href="./border.html" class="btn">border demo (24-6-2024)</a>
+      <a href="./position.html" class="btn">Position</a>
+      <a href="./shadow.html" class="btn">Shadow</a>
+      <a href="./sizing.html" class="btn">Sizing</a>
+      <a href="./table2.html" class="btn">Table</a>
+
      </div>
      <hr>
-     <h2>Float</h2>
-     <div class="flex">
-     <a href="./float.html" class="btn">float demo (24-6-2024)</a>
      </div>
-     <hr> 
-     <h2>Interaction</h2>
-     <div class="flex">
-     <a href="./interactions.html" class="btn">Interaction demo (24-6-2024)</a>
-     </div>
-     <hr>
-       <h2>Object fit</h2>
-     <div class="flex">
-     <a href="./objectfit.html" class="btn">object-fit demo (24-6-2024)</a>
-     </div>
-     <hr>
-     <h2>Overflow</h2>
-     <div class="flex">
-     <a href="./overflow.html" class="btn">overflow demo (24-6-2024)</a>
-     </div>
-     <hr>
-   
-    </div>
 </body>
 </html>
