learn bootstrap topic is button,badges,alert

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -101,6 +101,14 @@
       <a href="./shadow.html" class="btn">Shadow</a>
       <a href="./sizing.html" class="btn">Sizing</a>
       <a href="./table2.html" class="btn">Table</a>
+     </div>
+     <hr>
+     <h2>Bootstrap (28-6-2024)</h2>
+     <div class="flex">
+      <a href="./accordion.html" class="btn">Acordion</a>
+      <a href="./alert.html" class="btn">Alert</a>
+      <a href="./badges.html" class="btn">Badges</a>
+      <a href="./button.html" class="btn">Button</a>
 
      </div>
      <hr>
