learn card, collapse, dropdown topic in bootstrap

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -109,7 +109,13 @@
       <a href="./alert.html" class="btn">Alert</a>
       <a href="./badges.html" class="btn">Badges</a>
       <a href="./button.html" class="btn">Button</a>
-
+     </div>
+     <hr>
+     <h2>Bootstrap (29-6-2024)</h2>
+     <div class="flex">
+      <a href="./card.html" class="btn">Card</a>
+      <a href="./dropdown.html" class="btn">Dropdown</a>
+      <a href="./collapse.html" class="btn">Collapse</a>
      </div>
      <hr>
      </div>
