--- a/Bootstrap/dropdown.html
+++ b/Bootstrap/dropdown.html
@@ -11,12 +11,14 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </head>
+
 <body>
     <h2 class="bg-warning text-center text-danger p-2">Dropdown</h2>
     <div class="container bg-secondary-subtle p-4 my-3">
         <h2>Simple Dropdown</h2>
         <div class="dropdown">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown button</button>
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown
+                button</button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">item-1</a></li>
                 <li><a class="dropdown-item" href="#">item-2</a></li>
@@ -27,13 +29,16 @@
     <div class="container bg-secondary-subtle p-4 my-3">
         <h2>Dropdown divider and header</h2>
         <div class="dropdown">
-            <button class="btn btn-outline-danger dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown button</button>
+            <button class="btn btn-outline-danger dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown
+                button</button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-header" href="#">Category-1</a></li>
                 <li><a class="dropdown-item" href="#">item-1</a></li>
                 <li><a class="dropdown-item" href="#">item-2</a></li>
                 <li><a class="dropdown-item" href="#">item-3</a></li>
-                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-header" href="#">Category-1</a></li>
                 <li><a class="dropdown-item" href="#">item-1</a></li>
                 <li><a class="dropdown-item" href="#">item-2</a></li>
@@ -44,7 +49,8 @@
     <div class="container bg-secondary-subtle p-4 my-3">
         <h2>Dropdown active and disable</h2>
         <div class="dropdown">
-            <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown button</button>
+            <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown
+                button</button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item active" href="#">item-1</a></li>
                 <li><a class="dropdown-item disabled" href="#">item-2</a></li>
@@ -55,36 +61,40 @@
     <div class="container bg-secondary-subtle p-4 my-3">
         <h2>Dropdown directions</h2>
         <div class="d-flex gap-2">
-      <div class="dropup">
-            <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropup button</button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="#">item-1</a></li>
-                <li><a class="dropdown-item disabled" href="#">item-2</a></li>
-                <li><a class="dropdown-item" href="#">item-3</a></li>
-            </ul>
-        </div>
-        <div class="dropstart">
-            <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropstart button</button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="#">item-1</a></li>
-                <li><a class="dropdown-item disabled" href="#">item-2</a></li>
-                <li><a class="dropdown-item" href="#">item-3</a></li>
-            </ul>
-        </div>
-        <div class="dropend">
-            <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropend button</button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item active" href="#">item-1</a></li>
-                <li><a class="dropdown-item disabled" href="#">item-2</a></li>
-                <li><a class="dropdown-item" href="#">item-3</a></li>
-            </ul>
-        </div>
+            <div class="dropup">
+                <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropup
+                    button</button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item active" href="#">item-1</a></li>
+                    <li><a class="dropdown-item disabled" href="#">item-2</a></li>
+                    <li><a class="dropdown-item" href="#">item-3</a></li>
+                </ul>
+            </div>
+            <div class="dropstart">
+                <button class="btn btn-outline-warning dropdown-toggle" type="button"
+                    data-bs-toggle="dropdown">Dropstart button</button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item active" href="#">item-1</a></li>
+                    <li><a class="dropdown-item disabled" href="#">item-2</a></li>
+                    <li><a class="dropdown-item" href="#">item-3</a></li>
+                </ul>
+            </div>
+            <div class="dropend">
+                <button class="btn btn-outline-warning dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropend
+                    button</button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item active" href="#">item-1</a></li>
+                    <li><a class="dropdown-item disabled" href="#">item-2</a></li>
+                    <li><a class="dropdown-item" href="#">item-3</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="container bg-secondary-subtle p-4 my-3">
         <h2>Dropdown menu-align</h2>
         <div class="dropdown">
-            <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown menu align a right side</button>
+            <button class="btn btn-outline-success dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown
+                menu align a right side</button>
             <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item active" href="#">item-1</a></li>
                 <li><a class="dropdown-item disabled" href="#">item-2</a></li>
@@ -93,4 +103,5 @@
         </div>
     </div>
 </body>
+
 </html>
