learn navbar, pagination, placeholder, offcanvas in bootstrap

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -118,6 +118,22 @@
       <a href="./collapse.html" class="btn">Collapse</a>
      </div>
      <hr>
+     <h2>Bootstrap (1-7-2024)</h2>
+     <div class="flex">
+      <a href="./list-group.html" class="btn">List-group</a>
+      <a href="./model.html" class="btn">Modal</a>
+      <a href="./nav.html" class="btn">Navs</a>
      </div>
+     <hr>
+     <h2>Bootstrap (2-7-2024)</h2>
+     <div class="flex">
+      <a href="./navbar.html" class="btn">Navbar</a>
+      <a href="./offcanvas.html" class="btn">Offcanvas</a>
+      <a href="./pagination.html" class="btn">Pagination</a>
+      <a href="./placeholder.html" class="btn">Placeholder</a>
+     </div>
+     <hr>
+    </div>
 </body>
 </html>
+
