--- a/Bootstrap/offcanvas.html
+++ b/Bootstrap/offcanvas.html
@@ -16,8 +16,7 @@
     <h1 class="bg-danger-subtle text-center p-2">Offcanvas in bootstrap</h1>
     <div class="container mt-5 bg-success-subtle p-5">
         <h2>Show offcanvas</h2>
-        <a href="#offcanvas-demo" class="btn btn-primary mt-3" data-bs-toggle="offcanvas" role="button">Show
-            offcanvs</a>
+        <a href="#offcanvas-demo" class="btn btn-primary mt-3" data-bs-toggle="offcanvas" role="button">Show offcanvs</a>
 
         <!-- offcanvas -->
         <div class="offcanvas offcanvas-start text-bg-dark" id="offcanvas-demo">
@@ -26,8 +25,7 @@
                 <button class="btn-close btn-close-white" type="button" data-bs-dismiss="offcanvas"></button>
             </div>
             <div class="offcanvas-body">
-                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architecto
-                    sunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architecto sunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
                 <button class="btn btn-light mt-5">Learn More</button>
             </div>
         </div>
@@ -43,8 +41,7 @@
                 <button class="btn-close btn-close-white" type="button" data-bs-dismiss="offcanvas"></button>
             </div>
             <div class="offcanvas-body">
-                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architecto
-                    sunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architectosunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
                 <button class="btn btn-light mt-5">Learn More</button>
             </div>
         </div>
@@ -57,8 +54,7 @@
                 <button class="btn-close btn-close-white" type="button" data-bs-dismiss="offcanvas"></button>
             </div>
             <div class="offcanvas-body">
-                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architecto
-                    sunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architectosunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
             </div>
         </div>
         <a href="#offcanvas-demo4" class="btn btn-primary mt-3" data-bs-toggle="offcanvas" role="button">Bottom side</a>
@@ -70,11 +66,11 @@
                 <button class="btn-close btn-close-white" type="button" data-bs-dismiss="offcanvas"></button>
             </div>
             <div class="offcanvas-body">
-                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architecto
-                    sunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
+                <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt, iste. Perferendis architectosunt exercitationem, quam molestias magnam quibusdam incidunt dolorum.</div>
             </div>
         </div>
     </div>
 </body>
 
 </html>
+
