learn form, popover, progress-bar, scrollspy in bootstrap

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -130,6 +130,14 @@
       <a href="./placeholder.html" class="btn">Placeholder</a>
     </div>
     <hr>
+    <h2>Bootstrap (3-7-2024)</h2>
+    <div class="flex">
+      <a href="./popover.html" class="btn">Popovers</a>
+      <a href="./scrollspy.html" class="btn">Scrollspy</a>
+      <a href="./form.html" class="btn">Form</a>
+      <a href="./progress.html" class="btn">Progress bar</a>
+    </div>
+    <hr>
   </div>
 </body>
 </html>
