20% work done of bootstrap task

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
      <hr>
      <h2>Bootstrap</h2>
      <div class="flex">
-     <a href="./Bootstrap/index.html" class="btn">Bootstrap (17-6-2024)</a>
+     <a href="./Bootstrap/index.html" class="btn">Bootstrap all work</a>
+     <a href="./Bootstrap-task/index.html" class="btn">Bootstrap task (6-7-2024)</a>
      </div>
      <hr>
     </div>
