--- a/Bootstrap/image.html
+++ b/Bootstrap/image.html
@@ -9,7 +9,9 @@
   <body>
     <div class="container text-center mt-5">
         <h3>Image Demo</h3>
-        <img src="/UsabilityHub Clone/asset/asset 2.png" alt="" class="img-fluid w-50 rounded border">
+        <div class="image" style="width: 50%;">
+        <img src="/UsabilityHub Clone/asset/asset 2.png" alt="" class="img-fluid rounded border">
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
